// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProtectedRoute Component > should match snapshot when redirecting to login 1`] = `
<div>
  <div>
    Login Page
  </div>
</div>
`;

exports[`ProtectedRoute Component > should match snapshot with authenticated user 1`] = `
<div>
  <div>
    Dashboard Content
  </div>
</div>
`;

exports[`ProtectedRoute Component > should match snapshot with loading state 1`] = `
<div>
  <div
    class="MuiBox-root css-19yot6v"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </span>
  </div>
</div>
`;
